--- a/templates/index.html
+++ b/templates/index.html
@@ -27,9 +27,9 @@
           <div class="control is-expanded" style="flex-grow: 0.5; ">
             <label for="headline">Article Headline:</label>
             <input class="input is-large " type="text" id="hfield" name="headline" placeholder="Paste your headline here" autofocus autocomplete="off"><br><br>
-            <label for="article">Article Body:</label>
+            <label for="body">Article Body:</label>
             <!-- <input class="input is-large " type="text" size="50" id="afield" name="article" placeholder="Paste your article here" autofocus> -->
-            <textarea id="afield" name="article" form="newsform" placeholder="Paste your article here" autofocus></textarea>
+            <textarea id="afield" name="body" form="newsform" placeholder="Paste your article content here" autofocus></textarea>
           </div>
           <div class="control" style="padding: 0px 0px 0 10px; ">
             <input class="button is-large is-primary" type="submit" value="submit">
@@ -55,8 +55,8 @@
         <h3 id="result2" class="title is-4 is-spaced bd-anchor-title">
           Result:  {{  (messages['result2'])['tag']  }}
         </h3>
-        <h5>Probability of Headline Deception = {{  ((messages['result2'])['C-deceptive']*100)  }}%</h5>
-        <progress id="myBar" class="progress is-small {{  (messages['result2'])['color']  }}" value="{{  ((messages['result2'])['C-deceptive']*100) }}" style="width:50%" max="100">15%</progress>
+        <h5>Probability of Headline Deception = {{  ((messages['result2'])['H-deceptive']*100)  }}%</h5>
+        <progress id="myBar" class="progress is-small {{  (messages['result2'])['color']  }}" value="{{  ((messages['result2'])['H-deceptive']*100) }}" style="width:50%" max="100">15%</progress>
         <br>
         <h6> Classification based on Ensembled algorithm </h6>
         <br>
@@ -70,7 +70,7 @@
 
     <div class="artb">
         {% if (messages['result'] != '' ) %}
-            <h3 id="headline" class="title is-4 is-spaced bd-anchor-title">
+            <h3 id="body" class="title is-4 is-spaced bd-anchor-title">
               You entered this article body:
             </h3>
             <div class="bd-snippet bd-is-vertical bd-is-1">
@@ -82,8 +82,8 @@
               Result:  {{  (messages['result'])['tag']  }}
 
             </h3><h5>
-            Probability of Article Body Deception = {{  ((messages['result'])['P-deceptive']*100)  }}%</h5>
-            <progress class="progress is-small {{  (messages['result'])['color']  }}" value="{{  ((messages['result'])['P-deceptive']*100) }}" style="width:50%" max="100">15%</progress>
+            Probability of Article Body Deception = {{  ((messages['result'])['B-deceptive']*100)  }}%</h5>
+            <progress class="progress is-small {{  (messages['result'])['color']  }}" value="{{  ((messages['result'])['B-deceptive']*100) }}" style="width:50%" max="100">15%</progress>
             <br>
             <h6> Classification based on Ensembled Algorithm </h6>
             <br>
