--- a/static/style.css
+++ b/static/style.css
@@ -6,11 +6,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -webkit-font-smoothing: antialiased;
-  -moz-font-smoothing: antialiased;
-  -o-font-smoothing: antialiased;
   font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
 }
@@ -20,7 +15,6 @@ body {
   font-weight: 100;
   font-size: 12px;
   line-height: 30px;
-  color: #777;
   background: #660066;
 }
 
@@ -29,30 +23,91 @@ body {
   width: 100%;
   margin: 0 auto;
   position: relative;
+  border-radius: 5px;
+  box-shadow: 0px 0px 8px 4px;
+  background-color: #f2f2f2;
+  padding: 20px;
 }
 
-input[type="text"],textarea,button[type="submit"] {
-  font: 400 12px/16px "Roboto", Helvetica, Arial, sans-serif;
+.sentence{
+  background-color: white;
+  border-radius: 3px; 
 }
 
-#contact {
-  background: #F9F9F9;
-  padding: 25px;
-  margin: 150px 0;
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+.title{
+  font-size:45px;
+  font-weight: 500;
+  color:#ffd32a;
 }
 
-progress::-moz-progress-bar {
-  background: #ff6b6b;
+.nav{
+  font-size:15px;
+  cursor: pointer;
+  font-weight: 600;
+  background-color: purple;
+  border:solid black;
+  border-radius: 3px;
 }
 
-// Animation Keyframes
-@-webkit-keyframes bar-fill {
-  0% { width: 0; }
+.nav:active{
+  transform: scale(0.95);
 }
 
-@keyframes bar-fill {
-  0% { width: 0; }
+input[type="text"],textarea {
+  font: 500 20px "Roboto", sans-serif;
+}
+
+/* The side navigation menu */
+.sidenav {
+  height: 100%; /* 100% Full-height */
+  width: 0; /* 0 width - change this with JavaScript */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Stay on top */
+  top: 0; /* Stay at the top */
+  left: 0;
+  background-color: #222; /* color*/
+  overflow-x: hidden; /* Disable horizontal scroll */
+  padding-top: 60px; /* Place content 60px from the top */
+  transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+}
+
+/* The navigation menu links */
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+/* When you mouse over the navigation links, change their color */
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+/* Position and style the close button (top right corner) */
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+#main {
+  transition: margin-left .5s;
+  padding: 20px;
+}
+
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
+
+  padding-top: 60px;
 }
 
 h1 {
@@ -65,10 +120,10 @@ h1 {
 label {
   display: block;
   font-size: 14px;
+  color:white;
   font-weight: 700;
   margin-bottom: 10px;
 }
-
 
 h3 {
   display: block;
@@ -102,6 +157,8 @@ input[type="text"],textarea {
   width: 100%;
   border: 1px solid #ccc;
   background: #FFF;
+  border-radius: 4px; 
+  box-shadow: 0px 0px 3px 2px #222;
   margin: 0 0 5px;
   padding: 10px;
 }
@@ -124,65 +181,62 @@ button[type="submit"] {
   font-size: 15px;
 }
 
-
-
 input:focus,textarea:focus {
   outline: 0;
   border: 1px solid #aaa;
 }
 
-::-webkit-input-placeholder {
-  color: #888;
-}
-
-:-moz-placeholder {
-  color: #888;
-}
-
-::-moz-placeholder {
-  color: #888;
-}
-
-:-ms-input-placeholder {
-  color: #888;
-}
-
 textarea {
-  height: 100px;
-  max-width: 440px;
+  height: 200px;
+  max-width: 54%;  
   resize: none;
+}
+.input:hover{
+  box-shadow: 0px 0px 3px 3px maroon;
 }
 
 input[type=text], select {
-  width: 50%;
+  width: 52%;
   padding: 12px 20px;
   margin: 8px 0;
   display: inline-block;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
 }
 
-/*input[id=afield], select {
-  width: 10%;
-  height: 200px;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-}*/
+input[type=submit]:active{
+  transform:scale(0.96);
+}
+
+input[type=reset]:active{
+  transform:scale(0.96);
+}
 
 input[type=submit] {
-  width: 20%;
+  width: 16%;
   background-color: #4CAF50;
-  color: white;
+  box-shadow: 1px 1px 3px 2px black;  
+  color:white;
   padding: 14px 20px;
   margin: 8px 0;
   border: none;
   border-radius: 4px;
   cursor: pointer;
+}
+
+input[type=reset] {
+  width: 15%;
+  background-color: #B22222;
+  color: white;
+  box-shadow: 1px 1px 3px 2px black;  
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+p {
+  font-size: 25px;
+  font-weight: 300;
 }
 
 input[type=submit]:hover {
@@ -190,17 +244,14 @@ input[type=submit]:hover {
 }
 div[class='artb'] {
   border: 1px solid black;
-  background-color: #99ff99;
+  background-color: #2ecc71;
   border-radius: 5px;
-  padding-top: 20px;
-  padding-right: 20px;
-  padding-bottom: 20px;
-  padding-left: 20px;
+  padding: 20px 20px 20px 20px;
 }
 
 div[class='headb'] {
   border: 1px solid black;
-  background-color: #ffbb99;
+  background-color: #e67e22;
   border-radius: 5px;
   padding-top: 20px;
   padding-right: 20px;
@@ -208,23 +259,25 @@ div[class='headb'] {
   padding-left: 20px;
 }
 
-input[type=reset] {
-  width: 15%;
-  background-color: #B22222;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
+div[class='home'] {
+  border: 1px solid black;
+  background-color: #485460;
+  border-radius: 5px;
+  padding-top: 20px;
+  padding-right: 20px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+}
+
+div[class='about'] {
+  border: 1px solid black;
+  background-color: #3498db;
+  border-radius: 5px;
+  padding: 20px 20px 20px 20px;
 }
 
 input[type=reset]:hover {
   background-color: #8B0000;
 }
-div {
-  border-radius: 5px;
-  background-color: #f2f2f2;
-  padding: 20px;
-}
+
   </style>
