--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <div id="mySidenav" class="sidenav">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <a href="#">Home</a>      
       <a href="#about">About</a>
       <a href="#contact">Contact</a>
     </div>
-    <span class="nav" onclick="openNav()">Sidebar</span>
+    <i class="fa fa-bars fa-5 nav" aria-hidden="true" onclick="openNav()"></i>
     <div id="main">
 <head>
     <meta charset="utf-8">
